# rustflix

./: .env  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  docker-compose.yml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2023-01-21-111522_videos/: up.sql
migrations/2023-01-21-112850_users/: up.sql
migrations/2023-01-21-112930_views/: down.sql  up.sql
src/: args.rs  db.rs  main.rs  models.rs  schema.rs
src/ops/: user_ops.rs  video_ops.rs  view_ops.rs
