[package]
name = "rustflix"
version = "0.1.0"
edition = "2021"
authors = ["Apoclyps"]
description = "A CLI interface for tracking media on a popular streaming service"

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.1", features = ["derive"] }
diesel = { version = "2.0.2", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
